Fixed issues with banner BG misalignment, nav bar readability

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,7 @@ body {
 }
 
 .short .sky_bg {
-  height: 40%;
+  height: 40.5%;
   top: -10vh;
 }
 
@@ -156,10 +156,10 @@ h1, .subtitle, .teaser {
   left: 0;
   right: 0;
   z-index: 1;
-  padding: 40px;
+  padding: 40px 40px 80px;
   font-weight: 300;
   transition: background-color 0.5s, height 0.5s, padding 0.5s;
-  background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0));
+  background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0));
   box-shadow: 0 -7px 9px 5px rgba(0,0,0,0);
   -webkit-font-smoothing: antialiased;
   /* for our dear friend ie9 */
